<resources>
    <string name="app_name">TixTestNFC</string>
    <string name="serial_number">Serial Number</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="option_menu">⋮</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="sync">Sync</string>
    <string name="no_data_please_record_first">No Data, please record first</string>
    <string name="tap_nfc_first_for_saving_data">Tap NFC first for saving data</string>
</resources>